# protocol

./: .env.example  .gitignore  .pg_format  LICENSE  README.md  astro.config.mjs  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml
docs/content/docs/: index.mdx
docs/content/docs/development/: development.md
docs/content/docs/development/architecture/: data-layer.md  overview.md
docs/content/docs/development/database/: rls.md  schema.md
docs/content/docs/development/mcp-server/: mcp-tools.md
docs/content/docs/guides/: deployment.md  introduction.mdx  onboarding.md  prerequisites.mdx  usage-examples.md
docs/content/docs/roadmap/: roadmap.md
docs/styles/: landing.css
health/: .dockerignore  .gitignore  Dockerfile  app.py  fly.toml  main.py  pyproject.toml
health/features/: user.py
health/tests/utils/: test_db.py
health/user/: resource.py
prompts/: onboarding_prompt.md  project_prompt.md  project_prompt_short.md
server/: Dockerfile  app.py  fly.toml  main.py  pyproject.toml
server/data/: db.py
server/features/: supplements.py  user.py
server/tests/: conftest.py
server/tests/features/: test_supplements.py  test_user.py
server/tests/integration/: test_smoke.py
server/tests/utils/: test_db.py  test_pydantic.py
server/utils/: db.py  mcp_annotations.py  pydantic.py
supabase/: .gitignore  config.toml  seed.example.sql
supabase/migrations/: 20260310030000_role.sql  20260310035855_users.sql  20260329024017_supplements.sql  20260401233437_oauth.sql
(+3 files in other folders)
