[project]
name = "protocol"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asyncpg==0.30.0",
    "pydantic==2.12.5",
    "fastmcp==3.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
