[project]
name = "protocol"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asyncpg==0.30.0",
    "pydantic==2.12.5",
    "fastmcp==3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
    "testcontainers[postgres]>=4.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
markers = [
    "integration: tests requiring a database container",
]
