[project]
name = "protocol"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asyncpg==0.31.0",
    "pydantic==2.13.2",
    "fastmcp==3.2.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "testcontainers[postgres]>=4.14.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
markers = [
    "integration: tests requiring a database container",
]
